--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/Checklist-Icon.jpg" />
-    <meta property="og:image" content="images/To-Do List.png">
+    <meta property="og:image" content="%PUBLIC_URL%/To-Do List.png">
     <meta property="og:description" content="That simple application will allow you to create a to-do list ✔">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
